# C-LuaConfig

./: CMakeLists.txt  README.md  config.lua  main.cc
src/: luaconfig.h
